[workspace]
members = [
    "abc_119",
    "abc_118",
    "abc_117",
    "abc_116",
    "abc_115",
    "abc_114",
    "abc_109",
    "abc_108",
    "abc_107",
    "abc_106",
    "abc_105",
    "abc_104",
    "abc_103",
    "abc_102",
    "abc_101",
    "abc_100",
    "abc_099",
    "abc_098",
    "abc_097",
    "abc_096",
    "abc_095",
    "abc_094",
    "abc_093",
    "abc_092",
]
